2009-03-17  higepon  <higepon@users.sourceforge.jp>

        * TextualOutputPort.cpp (TextualOutputPort::putDatum): put-datum with inline hex escaped symbol (May be not enough).

        * Reader.y : Accepted reading inline hex escaped symbol.

2009-03-17  kokosabu  <kokosabu@gmail.com>

        * UTF8Codec.cpp : fixed putChar's error-handling.

        * Latin1Codec.cpp : Added encode/decode error-handling.

2009-03-17  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : Added put-datum.

        * StandardOutputPort.h (close): Not to close(stdout).

        * Replace the invalid MACRO names like __SCHEME__ to SCHEME_.(thanks to herumi-san).

        * scheme.h (UC): Force the order of operator L and ##. (thanks to herumi-san).

        * compiler.scm (iform-count-size-upto): Added cond clause for $RECEIVE.

        * library.scm (call-with-bytevector-output-port): Fixed wrong arguments.

        * Fixed bytevector-output-port's positions.

        * Fixed the problems on UTF16.

2009-03-16  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : bytevector->string checks the BOM things.

        * TranscodedTextualInputOutputPort.h : Moved eol-style implmentation from here to Transcoder.cpp.

        * tools/psyntax-r6rs/rev10_to_10/Makefile : MOSH_GENSYM_START=5000.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (psyntax): Changed file-options to use (rnrs enums).

2009-03-15  higepon  <higepon@users.sourceforge.jp>

        * cprocedures.cpp: We allocate CProcedure Objects after GC_INIT is issued.

        * free-vars.scm : (newline) commented out, since ./mosh test/srfi-misc.scm fails.

2009-03-15  kokosabu  <kokosabu@gmail.com>

        * PortProcedures.cpp : Added newline,
                               Fixed display, write.

2009-03-15  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp : Deleted unused code.
