@@ -1,3 +1,7 @@
+2009-03-18  higepon  <higepon@users.sourceforge.jp>
+
+        * Latin1Codec.cpp (Latin1Codec::getChar): Fixed.
+
 2009-03-17  higepon  <higepon@users.sourceforge.jp>
 
         * TextualOutputPort.cpp (TextualOutputPort::putDatum): put-datum with inline hex escaped symbol (May be not enough).
